# oracle-mcp-server

./: .gitignore  Dockerfile  LICENSE  MCP-Python-SDK-README.md  README-zh.md  README.md  approach.md  llms-full.txt  main.py  pyproject.toml
db_context/: __init__.py  database.py  models.py
db_context/schema/: formatter.py  manager.py
oracle_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/db/: .env.example  README.md  docker-compose.yml
test/db/init/: 01_create_tables.sql  02_create_simple_schema.sql  03_populate_tables.sql  04_create_views.sql
test/db/queries/: 01_service_satisfaction_analysis.sql  02_inventory_stock_analysis.sql  03_financial_transaction_analysis.sql  04_operations_facility_analysis.sql  05_sales_trend_analysis.sql  06_hr_attribute_analysis.sql  07_cross_department_analysis.sql  08_inventory_sales_correlation.sql  09_seasonal_trend_analysis.sql  10_integrated_performance_analysis.sql
